<resources>
    <string name="app_name">Picto</string>
    <string name="label_home">Home</string>
    <string name="label_search">Search</string>
    <string name="photo_desc">photo</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="back_button">back button</string>
    <string name="main_photo">main photo</string>
    <string name="profile_picture">profile picture</string>
    <string name="download_button">download button</string>
    <string name="default_description">No Description</string>
    <string name="download_title">Unsplash photo</string>
    <string name="download_description">Unsplash photo</string>
    <string name="download_start">Downloading photo</string>
    <string name="download_finish">Download complete</string>
    <string name="message_failed_get_photos">Failed to get photo</string>
    <string name="search_photos">Search Photos</string>
</resources>