<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_30"
        tools:context=".view.detail.DetailActivity">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:background="@null"
            android:contentDescription="@string/back_button"
            android:scaleType="center"
            android:src="@drawable/ic_back_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_24"
            android:background="@null"
            android:contentDescription="@string/download_button"
            android:src="@drawable/ic_download_light"
            app:layout_constraintBottom_toBottomOf="@+id/btn_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_back" />


        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:adjustViewBounds="true"
            android:contentDescription="@string/main_photo"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_back"
            tools:src="@drawable/dummy_image" />

        <TextView
            android:id="@+id/tv_desc"
            style="@style/TextView.Caption"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/default_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_photo" />

        <ImageView
            android:id="@+id/iv_user_profile_picture"
            android:layout_width="@dimen/dp_48"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_20"
            android:contentDescription="@string/profile_picture"
            android:src="@drawable/ic_person"
            app:layout_constraintStart_toStartOf="@+id/tv_desc"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

        <TextView
            android:id="@+id/tv_username"
            style="@style/TextView.Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_12"
            app:layout_constraintBottom_toBottomOf="@+id/iv_user_profile_picture"
            app:layout_constraintStart_toEndOf="@+id/iv_user_profile_picture"
            app:layout_constraintTop_toTopOf="@+id/iv_user_profile_picture"
            tools:text="Username" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
